# killpy

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .ruff.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile.integration  LICENSE  README.md  demo.tape  mkdocs.yml  pyproject.toml  record.sh  tester.sh
.github/workflows/: bump-version-dev.yml  bump-version.yml  docs.yml  gifs.yml  integration.yml  publish-package-dev.yml  publish-package.yml  test.yml
dev-docs/: ADDING_A_DETECTOR.md  ARCHITECTURE_ANALYSIS.md  CODING_CONVENTIONS.md
docs/: index.md  llms.txt  robots.txt
docs/architecture/: overview.md
docs/getting-started/: installation.md  quickstart.md
docs/integrations/: automation.md
docs/reference/: detector-types.md  json-output.md
docs/user-guide/: cli.md  faq.md  filtering-and-selection.md  troubleshooting.md  tui.md  use-cases.md
killpy/: __main__.py  cleaner.py  cli.py  models.py  scanner.py
killpy/cleaners/: __init__.py
killpy/commands/: _utils.py  clean.py  delete.py  doctor.py  find.py  list.py  stats.py
killpy/detectors/: __init__.py  _shared_walk.py  artifacts.py  base.py  cache.py  conda.py  hatch.py  pipenv.py  pipx.py  poetry.py  pyenv.py  tox.py  uv.py  venv.py
killpy/files/: __init__.py
killpy/intelligence/: __init__.py  git_analyzer.py  scoring.py  suggestions.py  tracker.py
killpy/killers/: conda_killer.py  pipx_killer.py  poetry_killer.py  pyenv_killer.py  venv_killer.py
tapes/: clean.tape  delete.tape  demo.tape  doctor.tape  find.tape  list-json.tape  list.tape  stats.tape
tests/integration/: test_system_e2e.py
tests/unit/: test_cleaner.py  test_cli_critical.py  test_cli_multiselect.py  test_cli_pipx.py  test_command_output.py  test_commands.py  test_delete_all.py  test_detectors.py  test_detectors_extended.py  test_files_and_cleaners.py  test_find.py  test_git_analyzer.py  test_scan_equivalence.py  (+5 more)
