[project]
name = "killpy"
version = "0.19.0"
description = "List all .venv directories and Conda environments 🐍 on your system and check how much space they are using. You can then choose which ones to delete in order to free up space 🧹."
readme = "README.md"
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["click>=8.1.8", "rich>=13.9.4", "textual>=1.0.0"]
requires-python = ">=3.10"

[project.urls]
Homepage = "https://github.com/Tlaloc-Es/killpy"
Documentation = "https://tlaloc-es.github.io/killpy/"
Repository = "https://github.com/Tlaloc-Es/killpy"
"Bug Tracker" = "https://github.com/Tlaloc-Es/killpy/issues"

[tool.setuptools]
license-files = []

[tool.setuptools.packages.find]
include = ["killpy*"]

[dependency-groups]
dev = [
    "commitizen>=4.1.0",
    "coverage>=7.6.10",
    "mkdocs-material>=9.6.0",
    "mypy>=1.14.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.4",
]


[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --cov=killpy --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
branch = true
source = ["killpy"]
omit = ["killpy/cli.py", "killpy/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
    "raise NotImplementedError",
]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.19.0"
version_files = ["pyproject.toml:version", "README.md:rev:"]

[project.scripts]
killpy = "killpy.__main__:cli"
